Set Events only on Display, fixed element alignment

--- a/killer_names.css
+++ b/killer_names.css
@@ -6,7 +6,7 @@
 	--accent-color: #ca3e47;
 	--accent-dark-color: #812027;
 	--text: #ecdfd7;
-  --default-transition: all .2s ease-out;
+	--default-transition: all 0.2s ease-out;
 }
 * {
 	margin: 0;
@@ -17,25 +17,28 @@ body {
 	color: var(--text);
 	background-color: var(--bg-color);
 	font-family: "Bahnschrift", "Roboto", "Arial", sans-serif;
-	height: 100vh;
 }
 input,
 button,
 textarea {
 	background-color: var(--bg-color);
 	color: var(--text);
+	outline-color: transparent;
+}
+#content {
 	outline: none;
+	max-height: 100vh;
 }
 #sidebar {
 	padding: 0 0.5rem;
 	padding-top: 1.5rem;
 	width: min(100%, 20rem);
-  height: 100vh;
+	height: 100vh;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 	border-right: var(--accent-color) solid 2px;
-  transition: var(--default-transition);
+	transition: var(--default-transition);
 }
 textarea#names {
 	border-style: solid;
@@ -49,7 +52,6 @@ textarea#names {
 	height: 50vh;
 	min-height: 30rem;
 	resize: none;
-	outline: none;
 	font-size: 1rem;
 }
 textarea#names:hover,
@@ -101,7 +103,7 @@ input.form-input {
 	width: 100%;
 	margin: 0;
 	resize: none;
-	outline: none;
+	outline-color: transparent;
 	color: var(--accent-color);
 	background-color: transparent;
 	padding: 0.1rem;
@@ -120,7 +122,7 @@ input.form-input[type="number"] {
 .btn {
 	cursor: pointer;
 	border: none;
-	outline: none;
+	outline-color: transparent;
 	text-decoration: none;
 	text-align: center;
 	width: max-content;
@@ -150,7 +152,7 @@ input.form-input[type="number"] {
 	font-size: 2rem;
 	padding: 0.5rem 1.5rem;
 }
-.btn.btn-menue {
+.btn.btn-menu {
 	font-size: 1.5rem;
 	padding: 0.5rem 1.5rem;
 }
@@ -178,7 +180,6 @@ input#target-count:focus {
 	overflow-y: scroll;
 	text-align: center;
 	width: 100%;
-	height: 100%;
 }
 .column-flex {
 	display: flex;
@@ -252,12 +253,11 @@ input#target-count:focus {
 	color: var(--bg-light3);
 }
 #display .display-all.all-players {
-	height: 100%;
 	display: flex;
 	flex-direction: row;
-	justify-content: space-around;
-	align-items: stretch;
 	flex-wrap: wrap;
+	justify-content: space-evenly;
+	align-items: center;
 }
 #display .display-all.player-container {
 	margin: 0.7rem;
@@ -274,66 +274,74 @@ input#target-count:focus {
 /* yama */
 
 main {
-  display: flex;
+	display: flex;
 }
 
 #content {
 	display: grid;
-  flex: 1;
+	flex: 1;
 	grid-template-areas: "sidebar buttons" "sidebar display";
 	grid-template-rows: min-content 1fr;
 	grid-template-columns: min-content 1fr;
 }
 
 #toggle-sidebar {
-  display: none;
-  gap: 5px;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  transition: var(--default-transition);
+	display: none;
+	gap: 5px;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	transition: var(--default-transition);
 }
 
 #toggle-sidebar > .line {
-  width: 1.25rem;
-  height: 2px;
-  background-color: var(--accent-color);
-  transition: var(--default-transition);
+	width: 1.25rem;
+	height: 2px;
+	background-color: var(--accent-color);
+	transition: var(--default-transition);
 }
 
 #toggle-sidebar > .line:nth-child(1),
 #toggle-sidebar > .line:nth-child(3) {
-  transform-origin: center center;
+	transform-origin: center center;
 }
 
-@media screen and (max-width: 768px) {
-  #button-container {
-    padding-left: 3rem;
-  }
+@media screen and (max-width: 900px) {
+	#button-container {
+		padding-left: 3rem;
+	}
 
-  #toggle-sidebar {
-    display: flex;
-    position: absolute;
-    top: .5rem;
-    left: .5rem;
-    width: 2rem;
-    height: 2rem;
-    border: 2px solid var(--bg-light2);
-  }
+	#toggle-sidebar {
+		display: flex;
+		position: absolute;
+		top: 0.5rem;
+		left: 0.5rem;
+		width: 2rem;
+		height: 2rem;
+		border: 2px solid var(--bg-light2);
+	}
 
-  #toggle-sidebar.open > .line:nth-child(1) { transform: rotate(45deg) translate(4.95px, 4.95px); }
-  #toggle-sidebar.open > .line:nth-child(2) { opacity: 0; }
-  #toggle-sidebar.open > .line:nth-child(3) { transform: rotate(-45deg) translate(4.95px, -4.95px); }
+	#toggle-sidebar.open > .line:nth-child(1) {
+		transform: rotate(45deg) translate(4.95px, 4.95px);
+	}
+	#toggle-sidebar.open > .line:nth-child(2) {
+		opacity: 0;
+	}
+	#toggle-sidebar.open > .line:nth-child(3) {
+		transform: rotate(-45deg) translate(4.95px, -4.95px);
+	}
 
-  #sidebar {
-    margin-left: -100vw;
-    width: 100vw;
-  }
+	#sidebar {
+		margin-left: -100vw;
+		width: 100vw;
+	}
 
-  #sidebar.open {
-    display: flex;
-    margin-left: unset;
-  }
+	#sidebar.open {
+		display: flex;
+		margin-left: unset;
+	}
 
-  .hidden { display: none !important; }
+	.hidden {
+		display: none !important;
+	}
 }
